manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8spratices-validation-webhook
  name: k8spratices-webhook
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: k8spratices-validation-webhook
  type: ClusterIP
status:
  loadBalancer: {}
