manifests/webhook.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8spratices-validation-webhook
webhooks:
- name: k8spratices-webhook.armateur.svc
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
  failurePolicy: Fail
  clientConfig:
    service:
      namespace: armateur
      name: k8spratices-webhook
      path: /services
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lVZEdnREZSc2lEVjNJejUrdXRSbjMvTUF6VFBVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2F6RUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJZd0ZBWURWUVFECkV3MUxkV0psY201bGRHVnpJRU5CTUI0WERURTVNRGt4TnpFek5ETXdNRm9YRFRJME1Ea3hOVEV6TkRNd01Gb3cKYXpFTE1Ba0dBMVVFQmhNQ1ZWTXhEekFOQmdOVkJBZ1RCazl5WldkdmJqRVJNQThHQTFVRUJ4TUlVRzl5ZEd4aApibVF4RXpBUkJnTl [...]
